cmake_minimum_required(VERSION 3.8)
project(h_interfaces)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)

# generate interface source files
find_package(rosidl_default_generators REQUIRED)
rosidl_generate_interfaces(${PROJECT_NAME}
  "action/TaskAction.action"
  "msg/ClientState.msg"
  "msg/ClientTask.msg"
  "msg/Status.msg"
  "msg/ClientObject.msg"
  "msg/DeliveryObject.msg"
  "srv/ElevatorPos.srv"
  "srv/DeliveryRequest.srv"
  "srv/TaskRequest.srv"
  "srv/PlannerApi.srv"
  DEPENDENCIES geometry_msgs
)
ament_export_dependencies(rosidl_default_runtime)

ament_package()